# expt

./: .gitignore  .pylintrc  .travis.yml  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: quick-tour.ipynb
expt/: __init__.py  colors.py  data.py  data_loader.py  data_loader_test.py  data_test.py  path_util.py  path_util_test.py  plot.py  plot_test.py  util.py  widgets.py
expt/experimental/: __init__.py  widgets.py
fixtures/: .gitignore  README.md
fixtures/sample_csv/: config.json  config.yaml  progress.csv
src/: lib.rs
