[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml]==7.1.0", # Python 3.7 support
    "wheel",
    "setuptools-rust==1.7.0",      # Python 3.7 support
]

[tool.setuptools_scm]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "google"
known_third_party = []
extra_standard_library = ['typing_extensions']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (runnable with --run-slow)",
    "benchmark: benchmark tests, report elapsed time",
    "serial",
]
filterwarnings = [
    "ignore:Call to deprecated create function .*Descriptor:DeprecationWarning",
    "ignore:.*is deprecated and will be removed in Pillow 10:DeprecationWarning",
]
