[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools_scm[toml]>=8.0",
    "wheel",
    "setuptools-rust",
]

[tool.setuptools_scm]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "google"
known_third_party = []
extra_standard_library = ['typing_extensions']

[tool.yapf]
# see https://github.com/google/yapf#knobs
based_on_style = "yapf"
indent_width = 2
spaces_before_comment = 2

[tool.yapfignore]
ignore_patterns = []

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (runnable with --run-slow)",
    "benchmark: benchmark tests, report elapsed time",
    "serial",
]
filterwarnings = [
    "ignore:Call to deprecated create function .*Descriptor:DeprecationWarning",
    "ignore:.*is deprecated and will be removed in Pillow 10:DeprecationWarning",
]
