[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[tool:pytest]
addopts = -W ignore::DeprecationWarning

[flake8]
# https://www.flake8rules.com/
# E501 Line too long (... > 79 characters)
# E502 The backslash is redundant between brackets
# E111 Indentation is not a multiple of 4
# E114 Indentation is not a multiple of 4 (comment)
# E121 Continuation line under-indented for hanging indent
# E126 Continuation line over-indented for hanging indent
# E127 Continuation line over-indented for visual indent
# E704 Multiple statements on one line (def)
# E731 Do not assign a lambda expression
# W504 line break after binary operator
ignore = E501,E502,E111,E114,E121,E126,E127,E704,E731,W504
